--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@
   font-size: large;
 }
 
+.level-up {
+  font-size: 20px;
+  height: 30px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
